--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BookShop Ecommerce</title>
+    <link rel ="stylesheet" href="styles.css">
 </head>
 <body>
-    
+   <section id ="header">
+    <a href="#"><img src ="img/logo.png" class="logo" alt=""></a>
+   
+
+ <div>
+    <ul id="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="books.html">Books</a></li>
+        <li><a href="login.html">Log In</a></li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="cart.html">Cart</a></li>
+        
+    </ul>
+ </div>
+</section>
+  <script src ="script.js"></script>  
 </body>
 </html>
