added hero section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookShop Ecommerce</title>
     <link rel ="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css"/>
    <section id ="header">
     <a href="#"><img src ="img/logo.png" class="logo" alt=""></a>
    
@@ -19,10 +18,20 @@
         <li><a href="books.html">Books</a></li>
         <li><a href="login.html">Log In</a></li>
         <li><a href="news.html">News</a></li>
-        <li><a href="cart.html">Cart</a></li>
+        <li><a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        </a></li>
+        
         
     </ul>
  </div>
+</section>
+
+<section id="hero">
+    <h1>Name of the bookshop</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sapiente illo, 
+        harum natus, voluptatum quis quod minima tempora saepe, maiores enim 
+        ex officia nesciunt aperiam a soluta accusamus nam corrupti?</p>
+    <button>SHOP NOW</button>
 </section>
   <script src ="script.js"></script>  
 </body>
